--- a/compte-rendu/compte-rendu.tex
+++ b/compte-rendu/compte-rendu.tex
@@ -82,7 +82,7 @@ Les fichiers correspondants :
 	\item \href{https://github.com/NellyBarret/IA5-TP-APR/blob/nelly/ExperienceReplayAgent.py}{ExperienceReplayAgent.py} : implémente la mémoire des agents
 	\item \href{https://github.com/NellyBarret/IA5-TP-APR/blob/nelly/DQNCartPole.py}{DQNCartPole.py} : implémente la résolution du problème CartPole avec un DQN
 	\item \href{https://github.com/NellyBarret/IA5-TP-APR/blob/nelly/breakout.py}{breakout.py} : implémente la résolution du problème Breakout avec un DQN
-	\item \href{https://github.com/NellyBarret/IA5-TP-APR/blob/nelly/breakout-convol.py}{breakout-convol.py} : implémente la résolution du problème Breakout avec un Breakout convolutionnel
+	\item \href{https://github.com/NellyBarret/IA5-TP-APR/blob/nelly/breakout-convol.py}{breakout-convol.py} : implémente la résolution du problème Breakout avec un DQN convolutionnel
 \end{itemize}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
